tests-integration/fixtures/checking/189_coercible_different_heads_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Nothing :: forall (a :: Type). Maybe (a :: Type)
Just :: forall (a :: Type). (a :: Type) -> Maybe (a :: Type)
Left :: forall (a :: Type) (b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
Right :: forall (a :: Type) (b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)
coerceDifferent :: Maybe Int -> Either Int String

Types
Maybe :: Type -> Type
Either :: Type -> Type -> Type

Data
Maybe
  Quantified = :0
  Kind = :0

Either
  Quantified = :0
  Kind = :0


Roles
Maybe = [Representational]
Either = [Representational, Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Coercible @Type (Maybe Int) (Either Int String)
  --> 8:1..8:50
  |
8 | coerceDifferent :: Maybe Int -> Either Int String
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
